fix: Improved compatibility with SDK 24